READMEのエンコード間違い修正

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Vector addition using native OpenCL C++ API
 ;author (attribution)
-: Âqç‰Ì (aokomoriuta)
+: é’å­å®ˆæ­Œ (aokomoriuta)
 ;URL
 : https://github.com/aokomoriuta
 
