--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Vector addition using native OpenCL C++ API
+get array number whose value is greater than threshold; using native OpenCL C++ API
 ;author (attribution)
 : 青子守歌 (aokomoriuta)
 ;URL
