--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-get array number whose value is greater than threshold; using native OpenCL C++ API
+Get array numberes whose value is greater than mine; using native OpenCL C++ API
 ;author (attribution)
 : 青子守歌 (aokomoriuta)
 ;URL
