--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Get array numberes whose value is greater than mine; using native OpenCL C++ API
+Get array numbers whose value is less different from mine than threshold; using native OpenCL C++ API
 ;author (attribution)
 : 青子守歌 (aokomoriuta)
 ;URL
