--- a/AddVector/README
+++ b/AddVector/README
@@ -1,4 +1,4 @@
-My studies of OpenCL using native OpenCL C++ API
+Vector addition using native OpenCL C++ API
 ;author (attribution)
 : 青子守歌 (aokomoriuta)
 ;URL
