--- a/ArrayGreaterThan/README
+++ b/ArrayGreaterThan/README
@@ -1,4 +1,4 @@
-My studies of OpenCL using native OpenCL C++ API
+get array number whose value is greater than threshold; using native OpenCL C++ API
 ;author (attribution)
 : 青子守歌 (aokomoriuta)
 ;URL
