--- a/ArrayMinimum/README
+++ b/ArrayMinimum/README
@@ -1,4 +1,4 @@
-My studies of OpenCL using native OpenCL C++ API
+Get minumum number of array value; using native OpenCL C++ API
 ;author (attribution)
 : 青子守歌 (aokomoriuta)
 ;URL
