--- a/README.mediawiki
+++ b/README.mediawiki
@@ -9,3 +9,5 @@ You can select the license of your choice from as following:
 * [http://creativecommons.org/licenses/by-sa/3.0/ Creative Commons Attribution-ShareAlike 3.0 Unported]
 * [http://creativecommons.org/licenses/by-nc/3.0/ Creative Commons Attribution-Noncommercial 3.0 Unported]
 * [http://www.gnu.org/licenses/gpl.html GNU General Public License v3.0 or later]
+
+See also [https://github.com/aokomoriuta/StudiesOfOpenCLWithCloo StudiesOfOpenCLWithCloo] for C# with Cloo.
